# artifical_bike_racing

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.nu  build.rs  dockerfile
clients/: basic.ipynb  game_pb2.py  game_pb2.pyi  game_pb2_grpc.py  pygad.ipynb
clients/.ipynb_checkpoints/: client1-checkpoint.ipynb  pygad-checkpoint.ipynb
proto/: game.proto
src/: camera.rs  main.rs  noise.rs  player.rs  server.rs  texture.rs  world.rs
src/world/: checkpoint.rs  load_texture.rs  mod.rs  noise.rs  terrain.rs
