[package]
name = "artificial_bike_racing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_rapier3d = { version = "0.18.0", features = [ "simd-stable", "debug-render" ] }

tonic-reflection = "0.5"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = {version = "4", features = ["derive"]}
image = "0.24"
noise = "0.8"
statrs = "0.16"
rand = {version = "0.8", features = ["small_rng"]}
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["serde_derive"] }

[build-dependencies]
tonic-build = "0.8"
